<resources>
    <string name="app_name">My Midin</string>

    <string name="login_text">LOGIN</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="facebook_app_id">1607245476240657</string>
    <string name="fb_login_protocol_scheme">fb1607245476240657</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="google_sign_in">SIGN IN WITH GOOGLE</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_product_view">ProductViewActivity</string>
    <string name="title_activity_product_edit">ProductEditActivity</string>

    <string name="title_activity_sales_edit">Edit Sales</string>
    <string name="title_activity_sales_view">View Sales</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="semicolon">:</string>

    <string name="title_activity_report">Report</string>
    <string name="tab_text_1">DAILY</string>
    <string name="tab_text_2">WEEKLY</string>
    <string name="tab_text_3">MONTHLY</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="forgot_password">Forgot password?</string>

    <string name="or_text">OR</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="home_text">Home</string>
    <string name="sales_text">Sales</string>
    <string name="product_text">Product</string>
    <string name="customer_text">Customer</string>
    <string name="report_text">Report</string>
    <string name="sign_out">Sign Out</string>
    <string name="name_text">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_text">Date</string>
    <string name="total_sales">Total Sales :</string>
    <string name="save_text">SAVE</string>
    <string name="products_text">Products</string>
    <string name="add_text">ADD</string>
    <string name="price_text">Price</string>
    <string name="quantity_text">Quantity</string>
    <string name="type_text">Type</string>
    <string name="address_text">Address</string>
    <string name="ic_no_text">IC Number</string>
    <string name="search_text">Search</string>

    <string name="product_name_text">Product Name</string>

</resources>
