<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
       <item
           android:id="@+id/nav_home"
           android:icon="@drawable/ic_home_black_24dp"
           android:title="@string/home_text"/>

        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/sales_text"/>

        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/product_text"/>

        <item
            android:id="@+id/nav_customer"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/customer_text"/>

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/report_text"/>

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out"/>
    </group>


</menu>
