<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/product_image_edit"
        android:layout_width="155dp"
        android:layout_height="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/product_text"
        app:layout_constraintBottom_toTopOf="@+id/product_name_edit_layout"
        app:layout_constraintDimensionRatio="w,4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_black_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_name_edit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/product_price_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image_edit">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_price_edit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/product_type_edit_layout"
        app:layout_constraintEnd_toEndOf="@+id/product_name_edit_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_name_edit_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_name_edit_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_price_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_text"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_qty_edit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/save_product_btn"
        app:layout_constraintEnd_toEndOf="@+id/product_type_edit_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_type_edit_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_type_edit_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_quantity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_text"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_type_edit_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/product_qty_edit_layout"
        app:layout_constraintEnd_toEndOf="@+id/product_price_edit_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_price_edit_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_price_edit_layout">

        <AutoCompleteTextView
            android:id="@+id/product_type_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_product_btn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/product_qty_edit_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_qty_edit_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_qty_edit_layout" />

</android.support.constraint.ConstraintLayout>