<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/product_image_input"
        android:layout_width="155dp"
        android:layout_height="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/product_text"
        app:layout_constraintBottom_toTopOf="@+id/product_name_input_layout"
        app:layout_constraintDimensionRatio="w,4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_photo_black_24dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_name_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/product_price_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image_input">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_text"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_price_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintEnd_toEndOf="@+id/product_name_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_name_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_name_input_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_price_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_text"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/product_qty_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/add_product_btn"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/product_quantity_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_text"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/product_qty_input_layout"
        app:layout_constraintEnd_toEndOf="@+id/product_price_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_price_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_price_input_layout">

        <AutoCompleteTextView
            android:id="@+id/type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/add_product_btn"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/product_qty_input_layout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/product_qty_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/product_qty_input_layout" />
</android.support.constraint.ConstraintLayout>